--- a/resources/static/screen.css
+++ b/resources/static/screen.css
@@ -142,13 +142,7 @@ ul, li
   background-color: #DDDDDD;
 }
 
-.searchResultModified
-{
-  font-size: 8pt;
-  color: grey;
-}
-
-.teaserText
+.descriptionTeaser, .author, .signature, .module
 {
   font-size: 8pt;
   color: black;
@@ -157,19 +151,6 @@ ul, li
 .calenderDateTeaserText div:hover
 {
   background-color: #BBBBBB;
-}
-
-.date
-{
-  font-size: 8pt;
-  font-weight: bold;
-  color: black;
-}
-
-.dateContext
-{
-  font-size: 8pt;
-  color: black;
 }
 
 .score
