Made Curr(y)gle banner a link to the top page

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -42,6 +42,11 @@ body {
   background-color: #ffffff;
 }
 
+h1 a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .help {
   float: right;
   padding: 0 18px;
