--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -108,21 +108,12 @@ h3 {
 }
 
 a {
-    color: #196AFF;
+    color: #3200B3;
 }
 
 a:hover {
-    color: #003390;
-}
-
-.active>a {
-    text-decoration: underline;
-    color: #196AFF;
-}
-
-.active>a:hover {
-    text-decoration: underline;
-    color: #196AFF;
+    color: #180058;
+    text-decoration: none;
 }
 
 .footer {
@@ -140,6 +131,7 @@ a:hover {
     margin-right: auto;
     margin-top: 50px;
     margin-bottom: 50px;
+    text-align: center;
 }
 
 .haskell-logo {
@@ -207,7 +199,7 @@ input[type="text"].tt-input:focus {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-  border: 2px solid #7EACFF;
+  border: 2px solid #9CAECF;
 }
 
 /* .typeahead { */
